crowdin: Update settings translations
Change-Id: I6a75335ecce7a262c9c285527597f4be759d3fd8
Signed-off-by: Vhmit <viktor.9630@protonmail.com>

--- a/Settings/res/values-pt-rBR/arrow_strings.xml
+++ b/Settings/res/values-pt-rBR/arrow_strings.xml
@@ -166,21 +166,22 @@
     <string name="less_boring_heads_up_title">Notificações prioritárias</string>
     <string name="less_boring_heads_up_summary">Mostrar notificações pop-up apenas para alarmes, discador e aplicativos de mensagem</string>
     <string name="spoofing_settings_summary">Configurações de spoof para integridade do dispositivo e muito mais</string>
+    <string name="spoofing_state_title">Habilitar opções de spoofing</string>
     <string name="pif_options_title">Opções de PIF</string>
-    <string name="json_spoofing_enabled_title">Ative valores personalizados para correção de integridade</string>
-    <string name="summary_pif_enabled">Os valores PIF estão ativados</string>
-    <string name="summary_pif_disabled">Os valores PIF estão desativados</string>
+    <string name="gms_spoofing_enabled_title">Ative spoofing de GMS</string>
+    <string name="gms_spoofing_enabled_summary">Spoof seu dispositivo para passar no play integrity.</string>
+    <string name="json_spoofing_enabled_title">Use valores personalizados para correção de integridade</string>
     <string name="pif_json_loader_title">Carregar arquivo JSON de correção de integridade</string>
     <string name="summary_pif_json_loader">Escolha um arquivo JSON para corrigir a integridade do dispositivo</string>
-    <string name="applied_json_viewer_title">Mostrar valores de correção de integridade aplicados</string>
-    <string name="summary_applied_json_viewer">Veja os valores de correção de integridade da play store aplicados atualmente</string>
-    <string name="show_pif_properties_title">Impressão digital</string>
+    <string name="update_pif_json_title">Atualize o arquivo PIF JSON</string>
+    <string name="summary_update_pif_json">Atualize o arquivo PIF JSON com os valores mais recentes. Requer conexão com a internet.</string>
+    <string name="show_pif_properties_title">Impressão PIF</string>
+    <string name="summary_show_pif_properties">Veja os valores de correção de integridade aplicados atualmente.</string>
     <string name="error_loading_properties">Erro ao carregar valores de correção</string>
-    <string name="gphotos_options_title">Google Fotos</string>
-    <string name="gphotos_spoof_switch_title">Armazenamento de fotos ilimitado</string>
-    <string name="summary_gphotos_spoof_enabled">Backup ilimitado está ativado</string>
-    <string name="summary_gphotos_spoof_disabled">Backup ilimitado está desativado</string>
-    <string name="key_attestation_keybox_title">Opções de atestado de keybox/chave</string>
-    <string name="key_attestation_switch_title">Desativar falsificações de keybox</string>
-    <string name="summary_key_attestation">Desativa todas as falsificações de estado de keybox e bootloader integradas. Necessário para módulos como TrickyStore.</string>
+    <string name="per_app_options_title">Spoofing por aplicativo</string>
+    <string name="per_app_spoofing_enabled_title">Ative spoofing por aplicativo</string>
+    <string name="per_app_json_loader_title">Carregar arquivo JSON de spoof por aplicativo</string>
+    <string name="summary_per_app_json_loader">Escolha um arquivo JSON personalizado para falsificação por aplicativo.</string>
+    <string name="summary_spoof_google">Spoof o dispositivo para o pixel mais recente em alguns aplicativos do Google.</string>
+    <string name="gphotos_spoof_switch_title">Armazenamento de google fotos ilimitado</string>
 </resources>
