crowdin: Update translations from GameSpace
Change-Id: I123a724b1af61f05501a00e5a33c6abc36fe4d52
Signed-off-by: Vhmit <viktor.9630@protonmail.com>

--- a/Settings/res/values-pt-rBR/arrow_strings.xml
+++ b/Settings/res/values-pt-rBR/arrow_strings.xml
@@ -155,7 +155,7 @@
     <string name="app_volume">Volume do aplicativo</string>
     <string name="app_volume_title">Controle de volume por aplicativo</string>
     <string name="app_volume_summary">Permite definir diferentes níveis de volume para cada aplicativo</string>
-    <string name="game_space_title">Espaço de jogo</string>
+    <string name="game_space_title">Área de jogos</string>
     <string name="game_space_summary">Configure seus jogos com ferramentas úteis para melhorar a jogatina.</string>
     <string name="selinux_status">Status do SELinux</string>
     <string name="maintainer">Mantenedor</string>
